--- a/css/style.css
+++ b/css/style.css
@@ -348,6 +348,7 @@ footer{
         background-color: #133945;
         align-items:start;
         height: 0;
+        width: 40vw;
         overflow: hidden;
         transition: 0.5s height ease-in-out;
         border-bottom-right-radius: 5px;
@@ -376,6 +377,9 @@ footer{
 
         .cerrar{
             font-weight: bold;
+            text-align: end;
+            padding-right: 3vw;
+            font-size: 2vh;
         }
     
         #principal:hover > #titulos1 p{
